no fixed navbar on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -4,31 +4,18 @@ body {
   background: #77777a;
 }
 
+button {
+  height: 48px;
+  margin-left: 20px;
+}
+
 #content {
   margin: 20px 0px;
-  margin-top: 100px;
 }
 
 #content h1 {
   text-align: center;
   color: white;
-}
-
-button {
-  font-size: 18px;
-  height: 48px;
-  border: none;
-  border-radius: 5px;
-  background: #f3f3f3;
-  padding: 0px 10px;
-  margin: 0px 10px;
-}
-
-button:focus,
-button:active,
-button:hover {
-  background: lightsteelblue;
-  color: black;
 }
 
 #nav-title {
@@ -130,7 +117,7 @@ div.tooltip {
   display:block !important;
 }
 
-@media (min-width: 720px) {
+@media (min-width: 768px) {
   .navbar-collapse {
      font-size: 18px;
      width: 20%;
@@ -143,19 +130,25 @@ div.tooltip {
      z-index: -1;
   }
 
-  #content {
-    margin-left: 20%;
-    width: 80%;
+  .navbar-position {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
-}
 
-@media (min-width: 768px) {
   .navbar-collapse.collapse {
       height: 100% !important;
   }
+
+  #content {
+    margin-left: 20%;
+    width: 80%;
+    margin-top: 100px;
+  }
 }
 
-@media (max-width: 580px) {
+@media (max-width: 767px) {
   #brand-text {
     display: none;
   }
